--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea HTML de Claudio</title>
+    <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
 
-    <div>
+    <div class="divClass">
         <h1>Claudio Aravena</h1>
         <h3>Henry</h3>
         <h4>Tarea de HTML / CSS</h4>
     </div>
-    <div>
-        <span>La gastronomía italiana son los alimentos, técnicas, platos y demás tradición culinaria de Italia, la cual es practicada por sus habitantes y refleja la riqueza cultural de sus regiones y de su historia./n La cocina italiana es parte integral de las gastronomías mediterráneas, cuya dieta fue declarada Patrimonio Cultural Inmaterial de la Humanidad en 2010 por la Unesco./n Algunas preparaciones más reconocidas son la pizza, el risotto, muchas formas de pasta, la parmigiana, la frittata, el gelato o el tiramisú. Italia también posee una larga tradición de vinos, café, chocolate, licores, quesos o aceite entre otros productos.</span>
-        <a href="https://www.divinopecado.cl/">Divino Pecado</a>
+    <div class="divClass">
+        <span id="spanId">La gastronomía italiana son los alimentos, técnicas, platos y demás tradición culinaria de Italia, la cual es practicada por sus habitantes y refleja la riqueza cultural de sus regiones y de su historia.<br/> La cocina italiana es parte integral de las gastronomías mediterráneas, cuya dieta fue declarada Patrimonio Cultural Inmaterial de la Humanidad en 2010 por la Unesco.<br/> Algunas preparaciones más reconocidas son la pizza, el risotto, muchas formas de pasta, la parmigiana, la frittata, el gelato o el tiramisú. Italia también posee una larga tradición de vinos, café, chocolate, licores, quesos o aceite entre otros productos.</span>
+        <br/>
+        <a class="aRef" href="https://www.divinopecado.cl/">Divino Pecado</a>
     </div>
-    <div>
+    <div id="thirdDiv">
         <li>
-            <ul>Pizza mediterranea <img src="https://th.bing.com/th/id/R.69510f34ebcba33e395f2a695c665393?rik=q2HWx7yhXffQLQ&riu=http%3a%2f%2fwww.recetario-cocina.com%2farchivosbd%2fpizza-mediterranea-casera.jpg&ehk=io7hwbcweCEqxzFAwpITy1KSeeJFLkQuweZB37LCRJE%3d&risl=&pid=ImgRaw&r=0" alt="pizza mediterranea"></ul>
-            <ul>Risotto <img src="https://th.bing.com/th/id/R.a36c90007708be1ac0f374a4366c61ee?rik=Huxysj3PEcJd8Q&pid=ImgRaw&r=0" alt="risotto"></ul>
+            <ul>Pizza mediterranea <br/><img src="https://th.bing.com/th/id/R.69510f34ebcba33e395f2a695c665393?rik=q2HWx7yhXffQLQ&riu=http%3a%2f%2fwww.recetario-cocina.com%2farchivosbd%2fpizza-mediterranea-casera.jpg&ehk=io7hwbcweCEqxzFAwpITy1KSeeJFLkQuweZB37LCRJE%3d&risl=&pid=ImgRaw&r=0" alt="pizza mediterranea"></ul>
+            <ul>Risotto <br/><img src="https://th.bing.com/th/id/R.a36c90007708be1ac0f374a4366c61ee?rik=Huxysj3PEcJd8Q&pid=ImgRaw&r=0" alt="risotto"></ul>
         </li>
     </div>
     
